force-app/main/default/objects/ssot__ShoppingCart__dlm/ssot__ShoppingCart__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Shopping Cart</referenceEntityGroup>
        <referenceEntityName>ShoppingCart</referenceEntityName>
        <referenceEntitySubjectArea>Shopping Cart</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>