force-app/main/default/objects/ssot__ShoppingCart__dlm/fields/ssot__BillToContactPointPhoneId__c.field-meta.xml
<CustomField>
    <fullName>ssot__BillToContactPointPhoneId__c</fullName>
    <label>Bill To Contact Point Phone</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BillToContactPointPhoneId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>