force-app/main/default/objects/ssot__ShoppingCart__dlm/fields/ssot__rel_1702009496367_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009496367_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ShoppingCart_BillToAccountId_map_Acc_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>ShoppingCart_BillToAccountId_map_Acc_rel</relationshipLabel>
    <relationshipName>rel_1702009496367_end</relationshipName>
    <type>Lookup</type>
</CustomField>