force-app/main/default/objects/ssot__ShoppingCart__dlm/fields/ssot__rel_1709922302920_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1709922302920_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ShoppingCart_ShipToContactPointPhone_rel</label>
    <referenceTo>ssot__ContactPointPhone__dlm</referenceTo>
    <relationshipLabel>ShoppingCart_ShipToContactPointPhone_rel</relationshipLabel>
    <relationshipName>rel_1709922302920_end</relationshipName>
    <type>Lookup</type>
</CustomField>