force-app/main/default/objects/ssot__ShoppingCart__dlm/fields/ssot__ShipToAccountId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShipToAccountId__c</fullName>
    <label>Ship To Account</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ShipToAccountId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>