force-app/main/default/objects/ssot__ShoppingCart__dlm/fields/ssot__ShipToContactPointPhoneId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShipToContactPointPhoneId__c</fullName>
    <label>Ship To Contact Point Phone</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ShipToContactPointPhoneId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>