force-app/main/default/objects/ssot__ShoppingCart__dlm/fields/ssot__ShoppingCart_CreatedById_map_User_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShoppingCart_CreatedById_map_User_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ShoppingCart_CreatedById_map_User_Id_N_1</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>ShoppingCart_CreatedById_map_User_Id_N_1</relationshipLabel>
    <relationshipName>ShoppingCart_CreatedById_map_User_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>