force-app/main/default/objects/ssot__ShoppingCart__dlm/fields/ssot__ShoppingCart_PartyId_map_Party_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShoppingCart_PartyId_map_Party_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ShoppingCart_PartyId_map_Party_Id_N_1</label>
    <referenceTo>ssot__Party__dlm</referenceTo>
    <relationshipLabel>ShoppingCart_PartyId_map_Party_Id_N_1</relationshipLabel>
    <relationshipName>ShoppingCart_PartyId_map_Party_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>